# QML

./: README.md  pyproject.toml  quantum.md
1_QuCharModel/: QuCharModel.ipynb
PennylaneExercise/: QuanCNN.ipynb
PennylaneExercise/_static/demonstration_assets/quanvolution/: q_test_images.npy  q_train_images.npy
SB/: README.md  quantum.md
src/qml/: __init__.py
