[project]
name = "qml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuto_Mac", email = "yuto17kz@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
jn = { cmd = "jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token=''" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qml"]
