[project]
name = "qml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuto_Mac", email = "yuto17kz@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "pennylane>=0.39.0",
    "tensorflow>=2.16.2",
    "matplotlib>=3.9.2",
    "torch>=2.5.1",
    "torchvision==0.20.1+cu124",
    "transformers>=4.46.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
jn = { cmd = "jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token=''" }

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qml"]
